Release 0.7.0.14
----------------
Added loading of 16x16 and 8x8 sprites in asset loader.
Fixed a bug with sprites not shown when posY >= height - spriteSize or posX >= width - spriteSize.  
Fixed issue with WindowX and large tiles.  Also fixed the off by 1 issue with small tiles.
When resetting the machine, reset the tilestride...

** TODO: Users can now modify the CPU registers when in debug mode. The registers have a white background when editable.
** TODO: Implemented the various cursor modes and rates.
** TODO: Implement an IEC interface to connect via USB to XUM1541 (try using the SerialPort class?).
** TODO: Implement the joystick using a USB joystick (try using the SerialPort class?).
** TODO: Add resolution modes for Rev C and U/U+ machines, when switching board with the list.
** TODO: Implement CPU clock to count cycles for fast computers.
** TODO: Implement Timers using the number of CPU cycles that have elapsed.  E.g. 16kHz == 393 cycles (6,293,750 / 16,0000).
** TODO: Add remote debugging capability for Calypsi compiler.
** TODO: Try to sort out the issue with the character sets in non-unicode installation.
** TODO: Saving basic files to emulated SD card often doesn't work or crashes the emulator.
** TODO: Support two joysticks and allow for multiple joystick buttons

Release 0.7.0.13
----------------
Fixed annoying bug when importing sprites in Asset Window when in F256 mode.
Added dummy SNES controller - it only return $FF for every byte.
Adjusted tile scrolling for small tiles to account for overlap between SSX3 and X0.

Release 0.7.0.12
----------------
Merged the F256K2e flat memory fork - https://github.com/RetroPM/FoenixIDE
Fixed MemoryWindow issue for old machines, where paging would cause an uncaught exception.

Release 0.7.0.11
----------------
Fixed trivial bug where the directory list is empty if the SD Card folder has no sub-folders.

Release 0.7.0.10
----------------
Added handling of sub-folders in the SD Card device.